--- a/styles.css
+++ b/styles.css
@@ -113,3 +113,160 @@ ul, li {
 .nav-btn:hover {
   transform: scale(1.05);
 }
+
+
+/* --------------------------------------- */
+.hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 4rem;
+}
+
+.hero-sub-title {
+    letter-spacing: 0.3rem;
+    font-size: 1.5rem;
+    line-height: 5rem;
+}
+
+.hero-title {
+    text-align: center;
+    font-size: 4rem;
+    letter-spacing: -0.2rem;
+    line-height: 4rem;
+    font-family: "Montserrat", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 900;
+
+}
+
+.hero-img {
+    margin-top: -2rem;
+}
+
+/* ----------------------------------------- */
+.search-container {
+    padding: 1.5rem var(--spacing-md);
+    border-radius: 1rem;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+}
+
+.hero-trip-options {
+    margin: 0;
+}
+
+.hero-trip-options button {
+    margin: 0;
+    padding: var(--spacing-md) var(--spacing-lg);
+    border: none;
+    color: white;
+    background-color: #8CB8D2;
+    border-radius: 2rem;
+    font-weight: 600;
+    margin: 0.5rem;
+    transition: all 0.3s ease;
+}
+
+.hero-trip-options button:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+}
+
+.hero-trip-options .second, .hero-trip-options .third {
+    background-color: #F1F7FE;
+    color: var(--1-color);
+}
+
+.hero-place {
+    display: flex;
+    position: relative;
+    width: 50%;
+}
+
+.hero-place .hero-from p:first-child, .hero-place .hero-to p:first-child {
+    color: #c7c4c4;
+}
+
+.hero-place div p {
+    margin-left: 1rem;
+}
+
+.hero-place .hero-from p:last-child, .hero-place .hero-to p:last-child {
+    font-weight: 700;
+}
+
+.hero-place div {
+    width: 250px;
+    border: 1px solid #0000002b;
+    padding: 1rem 0.5rem;
+    border-radius: 1rem;
+    margin-right: 0.5rem;
+}
+
+.hero-icon {
+    width: 1rem;
+    height: 1rem;
+    position: absolute;
+    top: 35%;
+    left: 15rem;
+    color: #00000089;
+    border: 1px solid #0000003a;
+    border-top: none;
+    border-bottom: none;
+    border-radius: 50%;
+    padding: 5px;
+    z-index: 1;
+    background-color: #F1F7FE;
+}
+
+/* -------------------------------- */
+.from-return {
+    display: flex;
+}
+
+.hero-dates {
+    width: 50%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.departure, .return {
+    width: 200px;
+    border: 1px solid #c7c4c4;
+    padding: 1rem 0.5rem;
+    border-radius: 1rem;
+    /* margin-right: 0.5rem; */
+}
+
+.hero-dates .departure p:first-child, .hero-dates .return p:first-child {
+    color: #c7c4c4;
+    margin-top: 0;
+}
+
+.hero-dates div p {
+    margin-left: 1rem;
+}
+
+.hero-dates .departure p:last-child, .hero-dates .return p:last-child {
+    font-weight: 700;
+}
+
+.hero-search-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 5rem;
+    height: 5rem;
+    background-color: #8CB8D2;
+    color: white;
+    border-radius: 50%;
+    transition: all 0.3s ease;
+}
+
+.hero-search-btn:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+}
