--- a/styles.css
+++ b/styles.css
@@ -395,3 +395,95 @@ ul, li {
     height: 330px;
     border-radius: 1rem;
 }
+
+
+/* POPULAR SECTION  */
+.popular {
+    margin-top: 4rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.popular-header {
+    text-align: center;
+}
+
+.popular-title {
+    font-family: montserrat;
+    font-size: 2.5rem;
+    font-weight: 900;
+}
+
+.popular-title-info {
+    font-size: 1rem;
+    color: #7F7F7F;
+}
+
+.popular-airlines {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    padding: 20px;
+    margin-top: 3rem;
+}
+
+.popular-airlines-card {
+    background: white;
+    border-radius: 16px;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+    min-width: 325px;
+    max-width: 350px;
+    flex: 0 0 auto;
+    position: relative;
+    transition: all 0.3s ease;
+}
+
+.popular-airlines-card:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+}
+
+.popular-airlines-card.first, .popular-airlines-card.last {
+    opacity: 0.3;
+    overflow: hidden;
+}
+
+.popular-airlines-card.unique {
+    height: 200px;
+}
+
+.popular-airlines-card.unique img {
+    height: 200px;
+}
+
+.popular-airlines img {
+    width: 100%;
+    height: 160px;
+    object-fit: cover;
+    display: block;
+    border-radius: 1rem;
+}
+
+.popular-airlines-label {
+    text-align: center;
+    bottom: -1.2rem ;
+    right: 1rem;
+    position: absolute;
+    padding: 16px 12;
+    font-weight: bold;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    width: 290px;
+    border-radius: 1rem;
+    background: rgba(255, 255, 255, 0.48);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(18.2px);
+    -webkit-backdrop-filter: blur(18.2px);
+    border: 1px solid rgba(255, 255, 255, 0.61);
+}
