Modify Question Section

--- a/styles.css
+++ b/styles.css
@@ -747,7 +747,7 @@ ul, li {
     transition: all 0.3s ease;
 }
 
-/* FAQs SECTION  */
+/* QUESTIONS SECTION  */
 .faqs-section {
     display: flex;
     background-color: #ffffff;
