--- a/styles.css
+++ b/styles.css
@@ -826,3 +826,102 @@ ul, li {
 .faq-question.active .icon {
   content: "-";
 }
+
+/* TOP VISITED PLACES  */
+.visited {
+    display: flex;
+    flex-direction: column;
+    margin-top: 5rem;
+    align-items: center;
+}
+
+.visited-header {
+    text-align: center;
+    margin-bottom: 4rem;
+}
+
+.visited-header h1{
+    font-family: montserrat;
+    font-size: 2.5rem;
+    font-weight: 900;
+}
+
+.visited-header p {
+    color: #7F7F7F;
+    margin-bottom: 2rem;
+    font-size: 1.2rem;
+}
+
+.visited-header-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.visited-header-buttons button {
+    border: none;
+    color: #16161b;
+    padding: 1rem 1.5rem;
+    border-radius: 2rem;
+    background-color: #F1F6FF;
+    font-weight: bold;
+    transition: all 0.3s ease;
+}
+
+.visited-header-buttons button:hover {
+    transform: scale(1.1);
+}
+
+.visited-header-buttons button.first{
+    background-color: #16161b;
+    color: #ffffff;
+    font-weight: normal;
+}
+
+
+.visited-gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 200px);
+  gap: 20px;
+  max-width: 1200px;
+  margin: auto;
+}
+
+.item {
+  position: relative;
+  border-radius: 20px;
+  overflow: hidden;
+  transition: all 0.3s ease;
+}
+
+.item:hover {
+    transform: scale(1.05);
+}
+
+.item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+.heart {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  color: #333;
+  transition: all 0.3s ease;
+}
+
+.heart:hover {
+    transform: scale(1.1);
+}
